--- a/7_command.ipynb
+++ b/7_command.ipynb
@@ -8,18 +8,55 @@
     }
    },
    "source": [
-    "# 강의내용\n",
+    "# Command 패턴\n",
     "\n",
-    "* 교재 6장 HFDP Ch6\n",
+    "## C.1 소개\n",
+    "\n",
     "* Command 패턴 (Behavioral Design Pattern)\n",
-    "* 프로그래밍 'Remote Control' (HFDP Ch6)\n",
-    "* TOC\n",
-    "    * intro\n",
-    "    * problems\n",
-    "    * before\n",
-    "    * design\n",
-    "    * after\n",
-    "    * case implementation\n",
+    "* Encapsulating invocation 함수호출을 숨김.\n",
+    "    * \"encapsulates a request as an object,\n",
+    "    thereby letting you parameterize other objects with different requests, queue or log requests, and \n",
+    "    support undoable operations\"\n",
+    "    * 전등을 켜는 예를 들면\n",
+    "        * 전등객체를 직접 이용해서 전등을 켜는 것이 아니라, 세부내용을 감추고 사용할 객체 없이 단순히 execute()함수만 호출.\n",
+    "        * execute()함수를 호출할 때 사용할 객체를 밝히지 않음. 전등객체를 미리 연결해 놓아야 함.\n",
+    "\n",
+    "* 감추려고 하는 것들 (캡슐화라고 하는 것)\n",
+    "    * 함수명 light.up() -> command.execute() 사용하는 함수 통일\n",
+    "    * 함수를 갖고 있는 객체 -> light를 모르고 execute() 사용객체 없이 함수호출.\n",
+    "    * 함수관련 값"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 디자인패턴 요소\n",
+    "\n",
+    "요소 | 설명\n",
+    "---|---\n",
+    "name | Command\n",
+    "problem | 사용객체의 API가 서로 다름.\n",
+    "solution | 실행과 요청을 분리.\n",
+    "consequence | (작은) 클래스가 많아지지만, 객체사용에 필요한 복잡성을 제거하고 감춤 (함수 명 동일해짐)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 프로그래밍 예제\n",
+    "    * HFDP Diner, 'Remote Control' (HFDP Ch6)\n",
+    "    * GUI buttons and menu items \n",
+    "    * Macro recording - lambda\n",
     "    * exercise (by Sat to git: 50% for 1 day late deadline) \n",
     "        * case extension\n",
     "            * Remote Controller - DVD (undo)\n",
@@ -34,144 +71,9 @@
     }
    },
    "source": [
-    "# 1. Command 패턴\n",
+    "## S.2 문제\n",
     "\n",
-    "\n",
-    "* Encapsulating invocation 함수호출을 숨김.\n",
-    "    * \"encapsulates a request as an object,\n",
-    "    thereby letting you parameterize other objects with different requests, queue or log requests, and \n",
-    "    support undoable operations\"\n",
-    "    * 전등을 켜는 예를 들면\n",
-    "        * 전등객체를 직접 이용해서 전등을 켜는 것이 아니라, 세부내용을 감추고 사용할 객체 없이 단순히 execute()함수만 호출.\n",
-    "        * execute()함수를 호출할 때 사용할 객체를 밝히지 않음. 전등객체를 미리 연결해 놓아야 함.\n",
-    "\n",
-    "* 감추려고 하는 것들 (캡슐화라고 하는 것)\n",
-    "    * 함수명 light.up() -> command.execute() 사용하는 함수 통일\n",
-    "    * 함수를 갖고 있는 객체 -> light를 모르고 execute() 사용객체 없이 함수호출.\n",
-    "    * 함수관련 값\n",
-    "\n",
-    "* cases\n",
-    "    * HFDP Diner, Remote Control\n",
-    "    * GUI buttons and menu items \n",
-    "    * Macro recording - lambda\n",
-    "\n",
-    "* 디자인패턴 요소\n",
-    "\n",
-    "요소 | 설명\n",
-    "---|---\n",
-    "name | Command\n",
-    "problem | 사용객체의 API가 서로 다름.\n",
-    "solution | 실행과 요청을 분리.\n",
-    "consequence | (작은) 클래스가 많아지지만, 객체사용에 필요한 복잡성을 제거하고 감춤 (함수 명 동일해짐)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 2. 문제\n",
-    "\n",
-    "* 사용하려는 객체가 많고, API가 서로 다름."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/media/Code/git/sd/lib\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
-      "Installation seems OK. File generation OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import glob\n",
-    "\n",
-    "mywd=%pwd\n",
-    "myplantdir=os.path.join(mywd,'lib')\n",
-    "mydotdir=!which dot\n",
-    "mydot=mydotdir[0]\n",
-    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
-    "\n",
-    "# plantuml.jar파일이 존재하는지 확인한후, 테스트\n",
-    "%cd {myplantdir}\n",
-    "glob.glob(r'./*.jar')\n",
-    "# dot 실행파일이 저장된 곳을 인식 못하는 경우, Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
-    "os.environ['GRAPHVIZ_DOT']=mydot\n",
-    "# 리눅스 예: 앞 느낌표는 쉘 명령어. {myplantdir}는 쉘에서 변수값을 읽어오는 것.\n",
-    "!java -jar {myplantdir}/plantuml.jar -testdot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installed plantuml_magics.py. To use it, type:\n",
-      "  %load_ext plantuml_magics\n"
-     ]
-    }
-   ],
-   "source": [
-    "%install_ext https://raw.githubusercontent.com/sberke/ipython-plantuml/master/plantuml_magics.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The plantuml_magics extension is already loaded. To reload it, use:\n",
-      "  %reload_ext plantuml_magics\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 3. before\n",
-    "\n",
+    "* 사용하려는 객체가 많고, API가 서로 다름.\n",
     "* Remote Control의 경우, 사용하려는 객체가 차고, 전등, TV, Stereo, CeilingFan... 많음.\n",
     "* 사용객체, API가 서로 다름\n",
     "    * 차고문 up()\n",
@@ -223,9 +125,26 @@
     }
    },
    "source": [
-    "# 4. 설계\n",
+    "## S.3 설계\n",
     "\n",
     "* decoupling - 주문과 실행을 분리\n",
+    "\n",
+    "Command Pattern | 설명 | Diner | Remote\n",
+    "---|---|---|---\n",
+    "Client | Command객체 생성 | 고객 | 리모콘 버튼의 기능을 인지하고, 버튼 누름.\n",
+    "Command | 어떤 Receiver를 실행할 지 연결 | 웨이터 | 버튼에 실제사용객체를 연결해 놓음.\n",
+    "Invoker | 주문을 받아서, 실행하기 위해 Command인터페이스 연결 | 주문서 | 리모콘. 버튼을 누르면 기능을 실행함.\n",
+    "Receiver | 실제 명령을 수행 | 요리사 | TV, 전등과 같은 실제객체."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* 역할\n",
     "    * Command\n",
     "        * knows about receiver and invokes a method of the receiver.\n",
@@ -240,14 +159,7 @@
     "        * 예: RemoteControl\n",
     "    * Client\n",
     "        * 무엇을 주문할지 결정하고, 주문Command을 Invoker에게 넘김\n",
-    "        * 예: main함수\n",
-    "\n",
-    "Command Pattern | 설명 | Diner | Remote\n",
-    "---|---|---|---\n",
-    "Client | Command객체 생성 | 고객 | 리모콘 버튼의 기능을 인지하고, 버튼 누름.\n",
-    "Command | 어떤 Receiver를 실행할 지 연결 | 웨이터 | 버튼에 실제사용객체를 연결해 놓음.\n",
-    "Invoker | 주문을 받아서, 실행하기 위해 Command인터페이스 연결 | 주문서 | 리모콘. 버튼을 누르면 기능을 실행함.\n",
-    "Receiver | 실제 명령을 수행 | 요리사 | TV, 전등과 같은 실제객체."
+    "        * 예: main함수"
    ]
   },
   {
@@ -300,101 +212,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext gvmagic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
-       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
-       "<!-- Generated by graphviz version 2.38.0 (20140413.2041)\n",
-       " -->\n",
-       "<!-- Title: G Pages: 1 -->\n",
-       "<svg width=\"477pt\" height=\"266pt\"\n",
-       " viewBox=\"0.00 0.00 476.89 265.74\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 261.74)\">\n",
-       "<title>G</title>\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-261.74 472.894,-261.74 472.894,4 -4,4\"/>\n",
-       "<!-- Client -->\n",
-       "<g id=\"node1\" class=\"node\"><title>Client</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"343.669\" cy=\"-239.74\" rx=\"33.2948\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"343.669\" y=\"-236.04\" font-family=\"Times,serif\" font-size=\"14.00\">Client</text>\n",
-       "</g>\n",
-       "<!-- Command -->\n",
-       "<g id=\"node2\" class=\"node\"><title>Command</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"203.669\" cy=\"-137.74\" rx=\"48.9926\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"203.669\" y=\"-134.04\" font-family=\"Times,serif\" font-size=\"14.00\">Command</text>\n",
-       "</g>\n",
-       "<!-- Client&#45;&gt;Command -->\n",
-       "<g id=\"edge1\" class=\"edge\"><title>Client&#45;&gt;Command</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M318.074,-228.074C304.373,-221.848 287.517,-213.337 273.669,-203.74 256.349,-191.737 238.978,-175.637 225.873,-162.463\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"228.172,-159.808 218.682,-155.098 223.164,-164.698 228.172,-159.808\"/>\n",
-       "<text text-anchor=\"middle\" x=\"360.169\" y=\"-192.54\" font-family=\"Times,serif\" font-size=\"14.00\">(1) Command객체 생성</text>\n",
-       "<text text-anchor=\"middle\" x=\"360.169\" y=\"-177.54\" font-family=\"Times,serif\" font-size=\"14.00\">new LightOnCommand(Light)</text>\n",
-       "</g>\n",
-       "<!-- Invoker\\n&#39;RemoteControl&#39; -->\n",
-       "<g id=\"node3\" class=\"node\"><title>Invoker\\n&#39;RemoteControl&#39;</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"256.669\" cy=\"-26.8701\" rx=\"76.2353\" ry=\"26.7407\"/>\n",
-       "<text text-anchor=\"middle\" x=\"256.669\" y=\"-30.6701\" font-family=\"Times,serif\" font-size=\"14.00\">Invoker</text>\n",
-       "<text text-anchor=\"middle\" x=\"256.669\" y=\"-15.6701\" font-family=\"Times,serif\" font-size=\"14.00\">&#39;RemoteControl&#39;</text>\n",
-       "</g>\n",
-       "<!-- Client&#45;&gt;Invoker\\n&#39;RemoteControl&#39; -->\n",
-       "<g id=\"edge5\" class=\"edge\"><title>Client&#45;&gt;Invoker\\n&#39;RemoteControl&#39;</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M376.965,-237.135C400.646,-234.043 430.941,-225.695 446.669,-203.74 464.194,-179.276 489.148,-130.244 439.669,-71.7401 426.241,-55.8628 380.92,-44.9283 338.743,-37.9468\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"339.104,-34.4602 328.678,-36.3434 338.002,-41.3731 339.104,-34.4602\"/>\n",
-       "</g>\n",
-       "<!-- Command&#45;&gt;Invoker\\n&#39;RemoteControl&#39; -->\n",
-       "<g id=\"edge2\" class=\"edge\"><title>Command&#45;&gt;Invoker\\n&#39;RemoteControl&#39;</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M220.425,-120.797C225.579,-115.176 230.884,-108.552 234.669,-101.74 241.182,-90.0185 245.967,-76.1544 249.379,-63.6213\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"252.773,-64.4743 251.828,-53.9218 245.986,-62.7608 252.773,-64.4743\"/>\n",
-       "<text text-anchor=\"middle\" x=\"341.169\" y=\"-90.5401\" font-family=\"Times,serif\" font-size=\"14.00\">(2) Command에 연결</text>\n",
-       "<text text-anchor=\"middle\" x=\"341.169\" y=\"-75.5401\" font-family=\"Times,serif\" font-size=\"14.00\">setCommand(LightOnCommand)</text>\n",
-       "</g>\n",
-       "<!-- Receiver\\n&#39;Light&#39; -->\n",
-       "<g id=\"node4\" class=\"node\"><title>Receiver\\n&#39;Light&#39;</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"46.669\" cy=\"-26.8701\" rx=\"46.8387\" ry=\"26.7407\"/>\n",
-       "<text text-anchor=\"middle\" x=\"46.669\" y=\"-30.6701\" font-family=\"Times,serif\" font-size=\"14.00\">Receiver</text>\n",
-       "<text text-anchor=\"middle\" x=\"46.669\" y=\"-15.6701\" font-family=\"Times,serif\" font-size=\"14.00\">&#39;Light&#39;</text>\n",
-       "</g>\n",
-       "<!-- Command&#45;&gt;Receiver\\n&#39;Light&#39; -->\n",
-       "<g id=\"edge4\" class=\"edge\"><title>Command&#45;&gt;Receiver\\n&#39;Light&#39;</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M157.945,-131.251C120.658,-125.807 72.0485,-116.174 58.669,-101.74 49.3997,-91.7401 45.7135,-77.5248 44.5907,-64.2309\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"48.0734,-63.7194 44.1821,-53.8651 41.0788,-63.9952 48.0734,-63.7194\"/>\n",
-       "<text text-anchor=\"middle\" x=\"114.169\" y=\"-90.5401\" font-family=\"Times,serif\" font-size=\"14.00\">(4) 실제 객체 실행</text>\n",
-       "<text text-anchor=\"middle\" x=\"114.169\" y=\"-75.5401\" font-family=\"Times,serif\" font-size=\"14.00\">Light.on()</text>\n",
-       "</g>\n",
-       "<!-- Invoker\\n&#39;RemoteControl&#39;&#45;&gt;Command -->\n",
-       "<g id=\"edge3\" class=\"edge\"><title>Invoker\\n&#39;RemoteControl&#39;&#45;&gt;Command</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M204.204,-46.7083C193.634,-53.002 183.876,-61.1942 177.669,-71.7401 170.906,-83.2311 173.482,-89.0814 177.669,-101.74 178.856,-105.329 180.569,-108.849 182.559,-112.192\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"179.75,-114.284 188.296,-120.547 185.521,-110.322 179.75,-114.284\"/>\n",
-       "<text text-anchor=\"middle\" x=\"204.169\" y=\"-90.5401\" font-family=\"Times,serif\" font-size=\"14.00\">(3) 실행</text>\n",
-       "<text text-anchor=\"middle\" x=\"204.169\" y=\"-75.5401\" font-family=\"Times,serif\" font-size=\"14.00\">execute()</text>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
    "source": [
+    "```\n",
+    "%load_ext gvmagic\n",
     "%%dot digraph G {\n",
     "    rankdir=TB;\n",
     "    Client -> Command[label=\"(1) Command객체 생성\\nnew LightOnCommand(Light)\"];\n",
@@ -402,7 +229,8 @@
     "    \"Invoker\\n'RemoteControl'\" -> Command[label=\"(3) 실행\\nexecute()\"];\n",
     "    Command -> \"Receiver\\n'Light'\"[label=\"(4) 실제 객체 실행\\nLight.on()\"];\n",
     "    Client -> \"Invoker\\n'RemoteControl'\";\n",
-    "}"
+    "}\n",
+    "```"
    ]
   },
   {
@@ -413,9 +241,24 @@
     }
    },
    "source": [
-    "# 5. after\n",
+    "## S.4 사례\n",
     "\n",
-    "* 교재 HFDP Ch6 'Remote Controller'"
+    "\n",
+    "* simple remote\n",
+    "* undo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### S.4.1 simpe remote\n",
+    "\n",
+    "* 단순 리모콘 사례"
    ]
   },
   {
@@ -485,7 +328,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "* 인터페이스 함수에 argument가 없다는 점에 유의한다.\n",
     "* 사용하려는 객체는 생성자에서 만들어 놓는다."
@@ -493,9 +340,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## 인터페이스를 정의하기\n",
+    "#### 인터페이스를 정의하기\n",
     "\n",
     "```public interface Command {\n",
     "    public void execute();\n",
@@ -504,9 +355,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## 인터페이스를 구현하기\n",
+    "#### 인터페이스를 구현하기\n",
     "\n",
     "```public class LightOnCommand implements Command {\n",
     "\tLight light;\n",
@@ -521,9 +376,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "## 인터페이스를 연결하고 실행하기\n",
+    "#### 인터페이스를 연결하고 실행하기\n",
     "\n",
     "```public class SimpleRemoteControl {\n",
     "\tCommand slot;\n",
@@ -535,34 +394,6 @@
     "\t\tslot.execute();\n",
     "\t}\n",
     "}```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 6. Case Implementation\n",
-    "\n",
-    "\n",
-    "* simple remote\n",
-    "* undo\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## 6.1. simpe remote\n",
-    "\n",
-    "* 단순 리모콘 사례"
    ]
   },
   {
@@ -857,7 +688,7 @@
     }
    },
    "source": [
-    "## 6.2 undo\n",
+    "### S.4.2 undo\n",
     "\n",
     "* 6.1에 undo()기능 추가\n",
     "* NoCommand클래스는 function body가 비어 있슴. 단순히 배열을 초기화."
@@ -1275,7 +1106,7 @@
     }
    },
    "source": [
-    "## 6.3 Party\n",
+    "### S.4.3 Party\n",
     "\n",
     "* 많은 기기\n",
     "* macro"
