--- a/6_singleton.ipynb
+++ b/6_singleton.ipynb
@@ -701,8 +701,9 @@
    "source": [
     "### S.4.3 thread\n",
     "\n",
-    "* 5.1과 동일하지만 thread safe.\n",
-    "* Synchronized\n"
+    "* 5.1과 동일하지만 thread safe\n",
+    "* getInstance()함수를 synchronized로 구현한다.\n",
+    "* 그러나, 한 Thread가 그 함수를 사용하고 떠나면, 다른 Thread가 그 함수를 사용할 수 있게 된다."
    ]
   },
   {
@@ -791,9 +792,15 @@
     }
    },
    "source": [
-    "### S.4.4 dcl\n",
+    "### S.4.4 DCL\n",
     "\n",
-    "* volatile\n"
+    "* getInstance()함수만을 synchroized를 하는 문제를 보완한다.\n",
+    "* Singleton 클래스 자체를 synchorized로 구현한다.\n",
+    "    * 클래스가 synchronized이므로, volatile로 만든다.\n",
+    "    * volatile은 Thread가 각자 사용하는 CPU cache의 값이 서로 다를 수 있는 차이를 방지한다.\n",
+    "    * Thread 1이 자신의 CPU cache 값을 변경하면, 곧 main memory 값을 변경하게 된다.\n",
+    "    * 즉 CPU cache memory와 main memory의 값을 동일하게 만든다.\n",
+    "\n"
    ]
   },
   {
