--- a/hello_sql.ipynb
+++ b/hello_sql.ipynb
@@ -10,16 +10,14 @@
    "source": [
     "# Sql\n",
     "\n",
-    "* Last Update: 20170326 20161006\n",
-    "* todo: caseDao, jdbc\n",
+    "* Last Update: 20170517 20161006\n",
     "\n",
     "## S.1 학습내용\n",
     "\n",
     "### S.1.1 목표\n",
     "\n",
-    "* 데이터를 DB로 저장하고 Sql을 사용할 수 있다.\n",
-    "    * sqlite\n",
-    "    * mysql"
+    "* MySql, Sqlite를 사용할 수 있다.\n",
+    "* Sql을 사용할 수 있다.\n"
    ]
   },
   {
@@ -99,13 +97,12 @@
     "* 테이블은 표와 비슷하다. 컬럼과 행으로 구성한다.\n",
     "* 속성은 표의 컬럼에 해당하며 attributes, fields라고 한다.\n",
     "* 레코드는 표의 행에 해당하며 records, tuples이다.\n",
-    "* 주키 primary key는 레코드를 유일하게 식별하는 속성\n",
+    "* 주키 primary key는 레코드를 유일하게 식별하는 속성이다.\n",
     "* 외래키 foreign key는 다른 테이블과 연결하기 위해 사용한다.\n",
     "* ERD Entity Relationship Diagram 엔티티-관계도는 엔티티 간의 관계를 그림으로 표현한 것이다.\n",
     "* DB의 모델은 Schema라고 한다.\n",
-    "* 모델링은 3계층 모델\n",
-    "    * 논리모델, 개념모델, 물리모델\n",
-    "* 논리모델 Logical Model은 'what'을 정의\n",
+    "* DB모델은 논리, 개념, 물리모델로 구분하여 3계층으로 구성한다. 많이 사용되는 모델이기도 한다.\n",
+    "* 논리모델 Logical Model은 'what'을 정의한다.\n",
     "* 물리모델 physical model은 'how', 즉 데이터타잎, 데이터길이 등을 정의한다.\n",
     "* 정규형 Normal Form은 1NF, 2NF, 3NF로 데이터중복을 최소화하는 기법이다."
    ]
@@ -118,7 +115,7 @@
     }
    },
    "source": [
-    "### S.2.2 sql\n",
+    "### S.2.2 Sql\n",
     "\n",
     "* Structured Query Language (SQL)\n",
     "* ANSI SQL은 표준으로, MySql, Orale과 같은 제품은 이를 기반으로 자체의 sql을 제공한다.\n",
@@ -145,16 +142,16 @@
     "-----|-----\n",
     "DB 생성 | CREATE DATABASE DATABASE_NAME;\n",
     "DB 삭제 | DROP DATABASE DATABASE_NAME;\n",
-    "DB 수정 | ALTER DATABASE\n",
-    "테이블 생성 | CREATE TABLE table_name (col_name col_data_type, ...)\n",
+    "DB 수정 | ALTER DATABASE;\n",
+    "테이블 생성 | CREATE TABLE table_name (col_name col_data_type, ...);\n",
     "테이블 삭제 | DROP TABLE table_name;\n",
     "테이블 입력 | INSERT INTO table_name VALUES (col_name, ...);\n",
     "테이블 조회 | SELECT col_name, ... FROM table_name WHERE conditions;\n",
     "테이블 수정 | UPDATE table_name SET col_name = value, ... WHERE conditions;\n",
-    "테이블 수정 | ALTER TABLE table_name ADD|DROP col_name\n",
+    "테이블 수정 | ALTER TABLE table_name ADD (or DROP) col_name;\n",
     "테이블 삭제 | DELETE FROM table_name WHERE conditions;\n",
-    "인덱스 생성 | CREATE INDEX\n",
-    "인덱스 삭제 | DROP INDEX"
+    "인덱스 생성 | CREATE INDEX;\n",
+    "인덱스 삭제 | DROP INDEX;"
    ]
   },
   {
@@ -167,7 +164,7 @@
    "source": [
     "### S.2.2 jdbc\n",
     "\n",
-    "* java database connectivity\n",
+    "* Java DataBase Connectivity\n",
     "\n",
     "단계 | 설명\n",
     "-----|-----\n",
@@ -311,7 +308,7 @@
     }
    },
    "source": [
-    "## S.3 sqlite\n",
+    "## S.3 Sqlite\n",
     "\n",
     "* 파일 기반의 데이터베이스이다.\n",
     "* 서버 기능이 없다.\n",
@@ -373,7 +370,7 @@
     }
    },
    "source": [
-    "### S.3.3 sql\n",
+    "### S.3.3 Sql\n",
     "\n",
     "* 권한제어 GRANT, REVOKE 기능은 서버가 있는 경우 사용하므로, 지원하지 않는다.\n",
     "* 데이터 타잎:\n",
@@ -575,15 +572,6 @@
     "단계 5 | sql |\n",
     "단계 6 | close |"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1063,6 +1051,8 @@
     "\n",
     "### S.4.1 설치\n",
     "\n",
+    "#### S.4.1.1 Linux\n",
+    "\n",
     "* purge all if any installed previously\n",
     "```\n",
     "$ sudo apt-get remove --purge mysql-server mysql-client mysql-common\n",
@@ -1084,11 +1074,37 @@
     }
    },
    "source": [
-    "* 실행\n",
-    "    * mysqld (server daemon)\n",
-    "    * mysqladmin (server admin)\n",
-    "    * mysql -u root -p (client)\n",
+    "#### S.4.1.2 윈도우\n",
     "\n",
+    "* https://dev.mysql.com/downloads/installer/\n",
+    "* 자신의 컴퓨터에 맞는 버전을 선택하여 설치"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 실행\n",
+    "    * 서버 실행 mysqld\n",
+    "    * 서버 관리 mysqladmin (server admin)\n",
+    "    * 클라이언트 (사용자 계정은 root)\n",
+    "```\n",
+    "mysql -u root -p (client)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* mysql server의 실행되고 있는지 확인하려면:\n",
     "    * ubuntu\n",
     "```\n",
@@ -1795,14 +1811,126 @@
     "단계 3 | driver | 'com.mysql.jdbc.Driver'\n",
     "단계 4 | db url | 'jdbc:mysql://localhost:3306/dbname'\n",
     "단계 5 | sql |\n",
-    "단계 6 | close |\n",
+    "단계 6 | close |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* Properties를 사용해서 '사용자계정'과 '비밀번호'를 프로그램에 드러나지 않게 한다.\n",
+    "    * key=value 형식으로 적는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile src/mysql.properties\n",
+    "USER=root\n",
+    "PASSWORD=1234567\n",
+    "URL=jdbc:mysql://localhost/test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " String path = System.getProperty(\"user.dir\");\r\n",
+      "|  Added variable path of type String with initial value \"/home/jsl/Code/git/bb/sd\"\r\n",
+      "\r\n",
+      " path += \"/src/mysql.properties\";\r\n",
+      "|  Expression value is: \"/home/jsl/Code/git/bb/sd/src/mysql.properties\"\r\n",
+      "|    assigned to temporary variable $2 of type String\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "String path = System.getProperty(\"user.dir\");\n",
+    "path += \"/src/mysql.properties\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Properties prop = new Properties();\r\n",
+      "|  Modified variable prop of type Properties with initial value {}\r\n",
+      "|    Update overwrote variable prop\r\n",
+      "\r\n",
+      " FileInputStream fin = new FileInputStream(path);\r\n",
+      "|  Added variable fin of type FileInputStream with initial value java.io.FileInputStream@31a5c39e\r\n",
+      "\r\n",
+      " prop.load(fin);\r\n",
+      "\r\n",
+      " System.out.println(prop.getProperty(\"USER\"));\r\n",
+      "root\r\n",
+      "\r\n",
+      " System.out.println(prop.getProperty(\"URL\"));\r\n",
+      "jdbc:mysql://localhost/test\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Properties prop = new Properties();\n",
+    "FileInputStream fin = new FileInputStream(path);\n",
+    "prop.load(fin);\n",
+    "System.out.println(prop.getProperty(\"USER\"));\n",
+    "System.out.println(prop.getProperty(\"URL\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* DB URL\n",
+    "    * Properties를 사용하지 않고, 프로그램 내에 URL 또는 getConnection()에 추가할 수 있다.\n",
+    "```\n",
+    "Connection conn=DriverManager.getConnection(\"jdbc:mysql://localhost/test\",\"root\",\"1234567\");\n",
+    "```\n",
     "\n",
-    "* db url\n",
-    "\n",
-    "db url | 설명\n",
+    "DB URL | 설명\n",
     "-----|-----\n",
     "\"jdbc:mysql://:3306/test\" | test 데이터베이스\n",
-    "\"jdbc:mysql://:3306/test?user=root&password=123\" | key-value형식으로 property를 설정할 수 있다."
+    "\"jdbc:mysql://:3306/test?user=root&password=1234567\" | key-value형식으로 property를 설정할 수 있다.\n",
+    "\n"
    ]
   },
   {
@@ -1826,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1871,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1885,12 +2013,15 @@
      "text": [
       " import java.sql.*;\r\n",
       "|    Update modified method printf(String,Object...)\r\n",
+      "|    Update modified variable path of type String with initial value \r\n",
+      "|    Update modified variable prop of type Properties with initial value \r\n",
+      "|    Update modified variable fin of type FileInputStream with initial value \r\n",
       "\r\n",
       " \r\n",
       "\r\n",
       " Class.forName(\"com.mysql.jdbc.Driver\");\r\n",
       "|  Expression value is: class com.mysql.jdbc.Driver\r\n",
-      "|    assigned to temporary variable $2 of type Class<?>\r\n",
+      "|    assigned to temporary variable $11 of type Class<?>\r\n",
       "\r\n"
      ]
     }
@@ -1920,20 +2051,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* .my.cnf를 사용하면 Java에서도 비밀번호를 생략할 수 있다?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1945,15 +2064,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Connection conn=DriverManager.getConnection(\"jdbc:mysql://localhost/test\",\"ro \r",
-      "ot\",\"100\");\r\n",
-      "Thu Apr 06 15:58:01 KST 2017 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\r\n",
-      "|  Added variable conn of type Connection with initial value com.mysql.jdbc.JDBC4Connection@5d47c63f\r\n",
+      " import java.sql.*;\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
+      " Class.forName(\"com.mysql.jdbc.Driver\");\r\n",
+      "|  Expression value is: class com.mysql.jdbc.Driver\r\n",
+      "|    assigned to temporary variable $16 of type Class<?>\r\n",
+      "\r\n",
+      " Connection conn = DriverManager.getConnection(\r\n",
+      "     prop.getProperty(\"URL\")+\"?useSSL=true\",\r\n",
+      "     prop.getProperty(\"USER\"),\r\n",
+      "     prop.getProperty(\"PASSWORD\")\r\n",
+      " );\r\n",
+      "|  Modified variable conn of type Connection with initial value com.mysql.jdbc.JDBC4Connection@105fece7\r\n",
+      "|    Update overwrote variable conn\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.sql.*;\n",
+    "\n",
+    "Class.forName(\"com.mysql.jdbc.Driver\");\n",
+    "Connection conn = DriverManager.getConnection(\n",
+    "    prop.getProperty(\"URL\")+\"?useSSL=true\",\n",
+    "    prop.getProperty(\"USER\"),\n",
+    "    prop.getProperty(\"PASSWORD\")\n",
+    ");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " Statement stmt = conn.createStatement();\r\n",
-      "|  Added variable stmt of type Statement with initial value com.mysql.jdbc.StatementImpl@3bbc39f8\r\n",
+      "|  Added variable stmt of type Statement with initial value com.mysql.jdbc.StatementImpl@482cd91f\r\n",
       "\r\n",
       " String sql = \"CREATE TABLE COMPANY \" +\r\n",
       "            \"(ID INT PRIMARY KEY     NOT NULL,\" +\r\n",
@@ -1965,7 +2121,7 @@
       "\r\n",
       " stmt.executeUpdate(sql);\r\n",
       "|  Expression value is: 0\r\n",
-      "|    assigned to temporary variable $6 of type int\r\n",
+      "|    assigned to temporary variable $20 of type int\r\n",
       "\r\n",
       " stmt.close();\r\n",
       "\r\n",
@@ -1975,8 +2131,6 @@
     }
    ],
    "source": [
-    "Connection conn=DriverManager.getConnection(\"jdbc:mysql://localhost/test\",\"root\",\"ㅋㅋㅋ\");\n",
-    "\n",
     "Statement stmt = conn.createStatement();\n",
     "String sql = \"CREATE TABLE COMPANY \" +\n",
     "           \"(ID INT PRIMARY KEY     NOT NULL,\" +\n",
@@ -1993,21 +2147,14 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
+   "name": "java"
   }
  },
  "nbformat": 4,
